Stanford Paragraph Types
-------------------------------

7.x-1.5              2018-10-17
-------------------------------
- Updates to the autoplay handling and youtube/vimeo javascript apis.

7.x-1.4              2018-06-26
-------------------------------
- added a little padding for mobile display
- added composer.json

7.x-1.3              2018-04-16
-------------------------------
- HSDO-1153 configured pathologic for minimal filter
- HSDO-1167 Added text/number field for icon grid
- Added number of columns per row for icon grid

7.x-1.2              2017-12-18
-------------------------------
- HSDO-1069 inset text at earlier breakpoint
- HSDO-1089 restored the "None" option to dynamic paragraph fields
- CSS and JS file name changes and improvements.

7.x-1.1              2017-06-19
-------------------------------
- HSDO-923: Added color and texture options to teaser card paragraph type.
- HSDO-939: New paragraph type "Section Header" which is an <h2> wrapped text field.
- HSDO-932: Provided the ability to limit optinos in the Dynamic pagagraph type
  based on roles. The field is either limited or disabled if editing.
- HSDO-952: Changed some styling with the callout text paragraph type
- HSDO-954: Section Header Style changes
- HSDO-934: Changed texture options.
- HSDO-970: Added some styling since stanford_story_page will no longer use a
  custom page template. We want to make sure some paragraphs are centered on the page.

7.x-1.0              2017-06-19
-------------------------------
- Initial Release