@@ -2,7 +2,7 @@ name = Stanford Paragraph Types Textarea Simple
 description = A Stanford Paragraph type that displays textarea and with fewer options than the Text Area paragraph
 core = 7.x
 package = Stanford
-version = 7.x-1.5
+version = 7.x-1.6
 project = stanford_paragraph_types_textarea_simple
 dependencies[] = ctools
 dependencies[] = features
