@@ -2,6 +2,6 @@ name = Stanford Paragraphs Defaults
 description = Allows the configuration of default layouts of the paragraphs.
 core = 7.x
 package = Stanford
-version = 7.x-1.5
+version = 7.x-1.6
 
 dependencies[] = paragraphs
